--- a/young/templates/young/detail.html
+++ b/young/templates/young/detail.html
@@ -41,6 +41,45 @@
 {{ object.description  }}  	
 	
 	
+<h2>支付测试</h2>
+    <div class="content2">
+        <div class="app">
+            <!--span class="iphone"><img src="../img/bgpic.jpg" width="100%" height="auto"></span-->
+            <label class="text_amount">
+                <input id="amount" type="text" placeholder="金 额"/>
+            </label>
+
+            <div class="ch">
+                <span class="up" onclick="wap_pay('upmp_wap')">银联WAP</span>
+                <span class="ap" onclick="wap_pay('alipay_wap')">支付宝WAP</span>
+            </div>
+        </div>
+    </div>
+
+<script src="http://nanyang.xjtu.edu.cn/oslab/client/src/pingpp_pay.js" type="text/javascript"></script>
+<script>
+    function wap_pay(channel) {
+        var amount = document.getElementById('amount').value * 100;
+
+        var xhr = new XMLHttpRequest();
+        xhr.open("POST", "http://nanyang.xjtu.edu.cn/oslab/server/example/pay.php", true);
+        xhr.setRequestHeader("Content-type", "application/json");
+        xhr.send(JSON.stringify({
+            channel: channel.toString(),
+            amount: amount
+        }));
+
+        xhr.onreadystatechange = function () {
+            if (xhr.readyState == 4 && xhr.status == 200) {
+                console.log(xhr.responseText);
+                PINGPP_PAY_SDK.payment(xhr.responseText);
+            }
+        }
+    }
+</script>
+
+
+
 	
   </div><!-- /content -->  
   <div data-role="footer">  
